static/css/style.css
/* ... */
.well.challenge-description {
/*        background-color: rgba(255, 255, 255, .5);*/
}


.label-verily-invert {
    background-color: #ffffff;
    color: #009c9c;
}

.label-verily-invert-muted {
    background-color: #eeeeee;
    color: #009c9c;
}

.navbar .label-verily-invert-muted {
    background-color: #53cfcf;
    color: #007f80;
}

.navbar-form.nav-search {
    margin-left: 0;
    margin-right: 0;
    padding-left: 0;
    padding-right: 0;
}

.nav-search .input-group {
    width: 100%;
}

#modal-share-question-link .modal-body {
    padding: 15px;
}

#modal-share-question-link .modal-body input {
    text-align: center;
} 


@media (min-width: 768px) {    
    .nav-search .input-group {
        width: 10vw;
        transition: all 0.25s ease;
    }
    
    #modal-share-question-link .modal-body {
        padding: 0;
    }
    
}

@media (min-width: 992px) {
    .navbar-form.nav-search {
        padding-left: 15px;
        padding-right: 15px;
    }
}

/* If username wraps it has some margin, rather than -15px */
.hero-cover .navbar-nav {
    margin: 7.5px 0;
}

.hero-cover .navbar-default .nav-search {
    margin-top: 24px;
}

a.username {
    padding-left: 15px !important;
}


.nav-search input {
/*    background-color: #71c7c7;*/
    color: #000000;
    border-color: #ddd;
    -webkit-box-shadow: none;
    box-shadow: none;
    padding-left: 6px;
    padding-right: 3px;
    border-right: none;
}

.nav-search button {
/*    background-color: #71c7c7;*/
    color: #999;
    border-color: #ddd;
    -webkit-box-shadow: none;
    box-shadow: none;
    padding-left: 0;
    padding-right: 6px;
    border-left: none;
    margin-left: 0 !important;
}

.nav-search button:hover,
.nav-search button:focus {
/*    background-color: #71c7c7;*/
    border-color: #ddd;
}

.nav-search input:focus,
.hero-cover .nav-search input:focus {
    background-color: #ffffff;
    border-color: #ddd;
    outline: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.nav-search button.focused,
.hero-cover .nav-search button.focused {
    background-color: #ffffff;
    color: #000000;
}


.hero-cover .nav-search input,
.hero-cover .nav-search button {
    border-color: #ddd;
    background-color: transparent;
}

.hero-cover .nav-search input {
    color: #ffffff;
    border-right: none;
}

.hero-cover .nav-search input:focus {
    color: #000000;
}

.hero-cover .nav-search button {
    border-left: none;
}



div.welcome .well {
    padding-top: 0;
}

div.welcome .well-sm {
    padding-top: 0;
    padding-bottom: 0;
}

div.welcome p.lead {
    margin-bottom: 0.5em;
}

div.welcome p.lead.stay-large {
    font-size: 21px !important;
}

div.welcome ul.lead.stay-large {
    font-size: 21px !important;
}


div.welcome p.event-date {
    display: inline-block;
    margin-right: 0.5em;
}

div.welcome .button-switch-timezone {
    font-weight: normal;
}

div.welcome .share-buttons {
}

div.welcome .enter-challenge-ctr {
    margin-top: 0.5em;
}

div.welcome .share-buttons .btn-group {
    margin-top: 0.5em;
    margin-right: 0.5em;
}

div.welcome .add-to-calendar-button {
/*    margin-left: 0.5em;*/
}

div.welcome .signup-form-for-updates input {
    margin-bottom: 0.5em;
}



.navbar-default {
    background-color: #ffffff;
/*    background-color: #009c9c;*/
/*    border-color: #ddd;*/
    border-color: transparent;
    border-radius: 0 !important;
}

.hero-cover .navbar-default {
    background-color: transparent;
}

.navbar-default a {
    font-weight: 400;
}


.navbar-default a.logo {
/*    color: #ffffff !important;*/
/*    color: #009c9c !important;*/
/*    color: #00c0c0 !important;*/
    color: #00aaaa !important;
}

.navbar-default .open a {
    color: #009c9c !important;
}

/* TODO: Use LESS variables */
.text-muted a {
    color: #999;
}

.fa-fw {
    width: 1em;
}

.col-trim-padding {

}

.freesize-row div.pull-left {
    padding-left: 15px;
}

.breadcrumb {
    background-color: transparent;
    padding-left: 0;
}

p.metadata {
    margin-bottom: 7px;
}

.small-caps {
    font-variant: small-caps;
}

fa.breadcrumb {
    margin-right: 0.5em;
}

.navbar-default .navbar-toggle {
    background-color: transparent;
    border-color: transparent;
}

.navbar-default .navbar-toggle .icon-bar {
    background-color: #ffffff;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    background-color: transparent;
    border-color: transparent;
}

.hero-cover .navbar-default .navbar-toggle {
    margin-top: 2em;
}

.hero-cover .navbar-default .navbar-collapse {
    border-color: transparent;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.hero-cover .navbar-default ul.navbar-nav li a {
    line-height: 60px;
}



.hero-cover .navbar-default {
    margin-bottom: 0;
}


.navbar-collapse {
    padding: 0;
}



.calendar-day {
    top: 3px;
}

.date-adj-calendar {
    top: 3px;
    line-height: 2em;
    width: 18em;
    text-align: left;
    margin-left: 2.5em;
}

.question.page-header {
/*    border-left-width: 0.75em;
    border-left-style: solid;
    padding-left: 1em;
    border-bottom-style: none;*/
}

.action-buttons {
    margin-top: 1em;
}

.action-buttons .row {
    margin-right: 0;
}
.answer-buttons{

}
.action-button-ctr {
    margin-top: 1em;
}

.mini.action-button-ctr {
    margin-left: 12px;
    float: none;
}

.mini.action-button-ctr:first-child {

}

.mini.action-button-ctr:last-child {

}

.additional-button-ctr {
    margin-top: 1em;
}

.btn-danger {
    color: #ffffff !important;
}


.text-action-button {
/*    width: 7em;*/

    min-width: 4em;
    font-weight: 800;

}

.text-action-button.share-button {
    height: 28px;
    padding: 3px 12px;
/*    background-color: transparent;*/
}

.text-action-button * {
}

.text-action-button.btn-success {
    border-color: #398439;
}

.text-action-button.btn-danger {
    border-color: #ac2925;
}
/* ... */

